--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+nav {
+    text-align: right;
+    padding: 30px 50px 0 0;
+}
+
 body {
     background-color: #FDCA40;
     font-family: 'Crimson Text', serif;
