--- a/style.css
+++ b/style.css
@@ -6,15 +6,66 @@
     box-sizing: border-box;
 }
 
+header {
+    width: 100%;
+    height: 600px;
+    background: #bc4e9c;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(0, 1%, 32%, 0.459), hsla(300, 1%, 22%, 0.664)), url(img/portada.jpg);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(0, 1%, 32%, 0.459), hsla(300, 1%, 22%, 0.664)), url(img/portada.jpg);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+nav {
+    text-align: right;
+    padding: 30px 50px 0 0;
+}
+
+nav>a {
+    color: #fff;
+    font-weight: 300;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+nav>a:hover {
+    text-decoration: underline;
+}
+
+header .textos-header {
+    display: flex;
+    height: 430px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.textos-header h1 {
+    font-size: 50px;
+    color: #fff;
+}
+
+.textos-header h2 {
+    font-size: 30px;
+    font-weight: 300;
+    color: #fff;
+}
+
 body {
     background-color: #FDCA40;
     font-family: 'Crimson Text', serif;
 }
 
 .navegacion {
-    width: 1000px;
-    margin: 50px auto;
-    background-color: #FDCA40;
+    width: 100px;
+    margin: 20px auto;
+    background-color: #F9DC5C;
 }
 
 .navegacion ul {
@@ -28,14 +79,14 @@ body {
 
 .menu>li>a {
     display: block;
-    padding: 15px;
-    color: #FDCA40;
+    padding: 10px;
+    color: #0C7489;
     font-family: roboto;
     text-decoration: none;
 }
 
 .menu li a:hover {
-    color: #DD7230;
+    color: #FDCA40;
     transition: all .3s;
 }
 
@@ -79,7 +130,7 @@ body {
     overflow: hidden;
     min-height: 15rem;
     border: 10px solid black;
-    box-shadow: 0px 8px 10px 8px #DD7230;
+    box-shadow: 0px 8px 10px 8px #F9DC5C;
 }
 
 #proparallax img {
@@ -268,17 +319,383 @@ body {
     object-fit: cover;
 }
 
+.cards-list {
+    z-index: 0;
+    height: 120%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.card {
+    margin: 30px auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 40px;
+    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.card .card_image {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+}
+
+.card .card_image img {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    object-fit: cover;
+}
+
+.card .card_title {
+    text-align: center;
+    border-radius: 0px 0px 40px 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: -80px;
+    height: 40px;
+}
+
+.card:hover {
+    transform: scale(0.9, 0.9);
+    box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+}
+
+.title-white {
+    color: white;
+}
+
+.title-black {
+    color: black;
+}
+
+@media all and (max-width: 500px) {
+    .card-list {
+        /* On small screens, we are no longer using row direction but column */
+        flex-direction: column;
+    }
+}
+
+.card {
+    margin: 30px auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 40px;
+    background-image: url('https://i.redd.it/b3esnz5ra34y.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+    transition: 0.4s;
+}
+
 .rowcafeteria {
-    text-align: center;
-}
-
-.colxs12colmd6 {
-    text-align: center;
-}
-
-img {
-    float: left;
-    border-image-outset: 1px;
-    display: block;
+    background-color: #00000083;
+    background: linear-gradient(to right, hsla(0, 1%, 32%, 0.459), hsla(300, 1%, 22%, 0.664)), url(img/cafeteria1.jpg);
+    background-size: cover;
+    background-attachment: fixed;
     position: relative;
+}
+
+.titulo {
+    text-align: center;
+    font-size: 2ch;
+    color: #fff;
+}
+
+.ideas h1 {
+    text-align: center;
+    margin: 5%;
+    font-size: 3ch;
+    color: #fff;
+}
+
+
+/* Fonts Form Google Font ::- https://fonts.google.com/  -:: */
+
+@import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Alegreya|Arima+Madurai|Dancing+Script|Dosis|Merriweather|Oleo+Script|Overlock|PT+Serif|Pacifico|Playball|Playfair+Display|Share|Unica+One|Vibur');
+
+/* End Fonts */
+
+
+/* Start Global rules */
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+/* End Global rules */
+
+
+/* Start body rules */
+
+body {
+    background-image: #fff;
+    background-image: #fff;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    font-family: 'Vibur', cursive;
+    /*   the main font */
+    font-family: 'Abel', sans-serif;
+    opacity: .95;
+    /* background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%); */
+}
+
+form {
+    width: 450px;
+    min-height: 500px;
+    height: auto;
+    border-radius: 5px;
+    margin: 2% auto;
+    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+    padding: 2%;
+    background-image: linear-gradient(-225deg, #F9DC5C 50%, #00A9A5 50%);
+}
+
+
+/* form Container */
+
+form .con {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+
+/* the header form form */
+
+header {
+    margin: 2% auto 10% auto;
+    text-align: center;
+}
+
+
+/* Login title form form */
+
+header h2 {
+    font-size: 250%;
+    font-family: 'Playfair Display', serif;
+    color: #3e403f;
+}
+
+
+/*  A welcome message or an explanation of the login form */
+
+header p {
+    letter-spacing: 0.05em;
+}
+
+
+/* //////////////////////////////////////////// */
+
+
+/* //////////////////////////////////////////// */
+
+.input-item {
+    background: #fff;
+    color: #333;
+    padding: 14.5px 0px 15px 9px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+
+/* Show/hide password Font Icon */
+
+#eye {
+    background: #fff;
+    color: #333;
+    margin: 5.9px 0 0 0;
+    margin-left: -20px;
+    padding: 15px 9px 19px 0px;
+    border-radius: 0px 5px 5px 0px;
+    float: right;
+    position: relative;
+    right: 1%;
+    top: -.2%;
+    z-index: 5;
+    cursor: pointer;
+}
+
+
+/* inputs form  */
+
+input[class="form-input"] {
+    width: 240px;
+    height: 50px;
+    margin-top: 2%;
+    padding: 15px;
+    font-size: 16px;
+    font-family: 'Abel', sans-serif;
+    color: #5E6472;
+    outline: none;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    transition: 0.2s linear;
+}
+
+input[id="txt-input"] {
+    width: 250px;
+}
+
+
+/* focus  */
+
+input:focus {
+    transform: translateX(-2px);
+    border-radius: 5px;
+}
+
+
+/* //////////////////////////////////////////// */
+
+
+/* //////////////////////////////////////////// */
+
+
+/* input[type="text"] {min-width: 250px;} */
+
+
+/* buttons  */
+
+button {
+    display: inline-block;
+    color: #252537;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    margin: 7% auto;
+    letter-spacing: 0.05em;
+}
+
+
+/* Submits */
+
+.submits {
+    width: 48%;
+    display: inline-block;
+    float: right;
+    margin-left: 2%;
+}
+
+
+/*       Forgot Password button FAF3DD  */
+
+.frgt-pass {
+    background: transparent;
+}
+
+
+/*     Sign Up button  */
+
+.sign-up {
+    background: #00A9A5;
+}
+
+
+/* buttons hover */
+
+button:hover {
+    transform: translatey(3px);
+    box-shadow: none;
+}
+
+
+/* buttons hover Animation */
+
+button:hover {
+    animation: ani9 0.4s ease-in-out infinite alternate;
+}
+
+@keyframes ani9 {
+    0% {
+        transform: translateY(3px);
+    }
+    100% {
+        transform: translateY(5px);
+    }
+}
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+* {
+    font-family: Roboto;
+}
+
+.footer-basic {
+    padding: 40px 0;
+    background-color: #000;
+    color: #4b4c4d;
+}
+
+.footer-basic ul {
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+}
+
+.footer-basic li {
+    padding: 0 10px;
+}
+
+.footer-basic ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
+}
+
+.footer-basic ul a:hover {
+    opacity: 1;
+}
+
+.footer-basic .social {
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.footer-basic .social>a {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #0C7489;
+    margin: 0 8px;
+    color: inherit;
+    opacity: 0.75;
+}
+
+.footer-basic .social>a:hover {
+    opacity: 0.9;
+}
+
+.footer-basic .copyright {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 13px;
+    color: #0C7489;
+    margin-bottom: 0;
 }
