--- a/style.css
+++ b/style.css
@@ -710,6 +710,6 @@ button:hover {
     background-size: auto;
     background-attachment: fixed;
     width: 300px;
-    height: 61%;
+    height: 600px;
     position: absolute;
 }
