--- a/style.css
+++ b/style.css
@@ -710,6 +710,6 @@ button:hover {
     background-size: cover;
     background-attachment: fixed;
     position: relative;
-    width: 300px;
+    width: 61%;
     height: 390px;
 }
