--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ body {
     min-height: 15rem;
     border: 10px solid black;
     box-shadow: 0px 8px 10px 8px #F9DC5C;
+    float: left;
 }
 
 #proparallax img {
