--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 header {
     width: 100%;
     height: 577px;
-    background: #bc4e9c;
+    background: #723c23be;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, hsla(0, 1%, 32%, 0.459), hsla(300, 1%, 22%, 0.664)), url(img/portada.jpg);
     /* Chrome 10-25, Safari 5.1-6 */
