--- a/style.css
+++ b/style.css
@@ -73,6 +73,16 @@ header .textos-header {
 body {
     background-color: #FDCA40;
     font-family: 'Crimson Text', serif;
+    width: 100%;
+    height: 700px;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(0, 1%, 32%, 0.459), hsla(300, 1%, 22%, 0.664)), url(img/portada.jpg);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(0, 1%, 32%, 0.459), hsla(300, 1%, 22%, 0.664)), url(img/portada.jpg);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
 }
 
 .navegacion {
