--- a/style.css
+++ b/style.css
@@ -650,7 +650,7 @@ button:hover {
 
 .footer-basic {
     padding: 40px 0;
-    background-color: rgb(97, 63, 25);
+    background-color: rgba(97, 63, 25, 0);
     color: #4b4c4d;
 }
 
