--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ button:hover {
 .footer-basic {
     padding: 40px 0;
     background-color: rgb(97, 63, 25);
-    color: #4b4c4d;
+    color: #000000;
 }
 
 .footer-basic ul {
