--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ button:hover {
     display: inline-block;
     text-align: center;
     border-radius: 50%;
-    border: 1px solid #0C7489;
+    border: 1px solid #000000;
     margin: 0 8px;
     color: inherit;
     opacity: 0.75;
@@ -704,7 +704,7 @@ button:hover {
     margin-top: 15px;
     text-align: center;
     font-size: 13px;
-    color: #0C7489;
+    color: #000000;
     margin-bottom: 0;
 }
 
