--- a/style.css
+++ b/style.css
@@ -650,8 +650,8 @@ button:hover {
 
 .footer-basic {
     padding: 40px 0;
-    background-color: rgb(97, 63, 25);
-    color: #000000;
+    background-color: rgb(88, 58, 24);
+    color: #4b4c4d;
 }
 
 .footer-basic ul {
@@ -670,11 +670,11 @@ button:hover {
 .footer-basic ul a {
     color: inherit;
     text-decoration: none;
-    opacity: 0;
+    opacity: 0.8;
 }
 
 .footer-basic ul a:hover {
-    opacity: 0;
+    opacity: 1;
 }
 
 .footer-basic .social {
@@ -690,21 +690,21 @@ button:hover {
     display: inline-block;
     text-align: center;
     border-radius: 50%;
-    border: 1px solid #000000;
+    border: 1px solid #0C7489;
     margin: 0 8px;
     color: inherit;
-    opacity: 0;
+    opacity: 0.75;
 }
 
 .footer-basic .social>a:hover {
-    opacity: 0;
+    opacity: 0.9;
 }
 
 .footer-basic .copyright {
     margin-top: 15px;
     text-align: center;
     font-size: 13px;
-    color: #000000;
+    color: #0C7489;
     margin-bottom: 0;
 }
 
