--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header .textos-header {
 }
 
 body {
-    background-color: #FDCA40;
+    background-color: #723c23be;
     font-family: 'Crimson Text', serif;
     width: 100%;
     height: 770px;
