Diego Django Sin Errores

--- a/cooperativa/galeria/templates/galeria/fotografia.html
+++ b/cooperativa/galeria/templates/galeria/fotografia.html
@@ -9,7 +9,7 @@
     <title>Layered Card Hover</title>
     <link type="text/css" rel="stylesheet" href="{% static 'galeria/css/fotografia.css' %}">
 </head>
-<a href="index.html">Inicio</a>
+<a href="{% url 'home' %}">Inicio</a>
 
 <body>
     <div class="box">
