--- a/cooperativa/galeria/templates/galeria/exposiciones.html
+++ b/cooperativa/galeria/templates/galeria/exposiciones.html
@@ -33,11 +33,11 @@
     <header>
 
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="exposiciones.html">Exposiciones</a>
-            <a href="contacto.html">Contacto</a>
-            <a href="registrarse.html">Registrarse</a>
-            <a href="inicio sesion.html">Iniciar Sesion</a>
+            <a href="{% url 'home' %}">Inicio</a>
+            <a href="{% url 'exposiciones' %}">Exposiciones</a>
+            <a href="{% url 'contacto' %}">Contacto</a>
+            <a href="{% url 'registro' %}">Registrarse</a>
+            <a href="{% url 'iniciosesion' %}">Iniciar Sesion</a>
         </nav>
 
         <section class="textos-header">
